--- a/package.json
+++ b/package.json
@@ -16,47 +16,61 @@
     "url": "git+https://github.com/davewasmer/ember-baremetrics-calendar.git"
   },
   "scripts": {
-    "build": "ember build",
-    "lint:js": "eslint ./*.js addon addon-test-support app config lib server test-support tests",
+    "build": "ember build --environment=production",
+    "lint": "npm-run-all --aggregate-output --continue-on-error --parallel lint:*",
+    "lint:hbs": "ember-template-lint .",
+    "lint:js": "eslint .",
     "start": "ember serve",
-    "test": "ember try:each"
+    "test": "npm-run-all lint:* test:*",
+    "test:ember": "ember test",
+    "test:ember-compatibility": "ember try:each"
   },
   "dependencies": {
-    "BaremetricsCalendar": "1.0.8",
-    "broccoli-funnel": "2.0.1",
-    "broccoli-merge-trees": "2.0.0",
-    "broccoli-stew": "1.5.0",
-    "ember-cli-babel": "6.6.0",
-    "moment": "2.19.1"
+    "@ember/render-modifiers": "^1.0.2",
+    "@glimmer/component": "^1.0.1",
+    "@glimmer/tracking": "^1.0.1",
+    "BaremetricsCalendar": "^1.0.13",
+    "ember-auto-import": "^1.6.0",
+    "ember-cli-babel": "^7.22.1",
+    "ember-cli-htmlbars": "^5.2.0",
+    "macro-decorators": "^0.1.2",
+    "moment": "^2.27.0"
   },
   "devDependencies": {
-    "broccoli-asset-rev": "2.4.5",
-    "ember-ajax": "3.0.0",
-    "ember-cli": "3.0.0",
-    "ember-cli-dependency-checker": "2.0.0",
-    "ember-cli-eslint": "4.2.1",
-    "ember-cli-htmlbars": "2.0.1",
-    "ember-cli-htmlbars-inline-precompile": "1.0.0",
-    "ember-cli-inject-live-reload": "1.4.1",
-    "ember-cli-qunit": "4.1.1",
-    "ember-cli-sri": "2.1.0",
-    "ember-cli-uglify": "2.0.0",
-    "ember-disable-prototype-extensions": "1.1.2",
-    "ember-export-application-global": "2.0.0",
-    "ember-load-initializers": "1.0.0",
+    "@ember/optional-features": "^2.0.0",
+    "babel-eslint": "^10.1.0",
+    "broccoli-asset-rev": "3.0.0",
+    "broccoli-funnel": "^3.0.3",
+    "broccoli-merge-trees": "^4.2.0",
+    "broccoli-stew": "^3.0.0",
+    "ember-cli": "3.20.0",
+    "ember-cli-dependency-checker": "3.2.0",
+    "ember-cli-inject-live-reload": "2.0.2",
+    "ember-cli-sri": "2.1.1",
+    "ember-cli-uglify": "3.0.0",
+    "ember-disable-prototype-extensions": "1.1.3",
+    "ember-export-application-global": "2.0.1",
+    "ember-jquery": "^1.0.5",
+    "ember-load-initializers": "2.1.1",
     "ember-maybe-import-regenerator": "0.1.6",
-    "ember-moment": "7.4.1",
-    "ember-resolver": "4.0.0",
-    "ember-source": "3.0.0",
-    "ember-source-channel-url": "1.0.1",
-    "ember-try": "0.2.23",
-    "ember-welcome-page": "3.0.0",
-    "eslint-plugin-ember": "5.0.0",
-    "eslint-plugin-node": "5.2.1",
-    "loader.js": "4.2.3"
+    "ember-qunit": "^4.6.0",
+    "ember-resolver": "^8.0.2",
+    "ember-source": "3.20.2",
+    "ember-source-channel-url": "2.0.1",
+    "ember-template-lint": "^2.9.1",
+    "ember-try": "1.4.0",
+    "eslint": "^7.5.0",
+    "eslint-plugin-ember": "^8.13.0",
+    "eslint-plugin-node": "11.1.0",
+    "loader.js": "4.7.0",
+    "npm-run-all": "^4.1.5",
+    "qunit-dom": "^1.2.0"
   },
   "engines": {
-    "node": "^4.5 || 6.* || >= 7.*"
+    "node": "10.* || >= 12"
+  },
+  "ember": {
+    "edition": "octane"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
