--- a/package.json
+++ b/package.json
@@ -25,19 +25,24 @@
     "test:ember": "ember test",
     "test:ember-compatibility": "ember try:each"
   },
+  "peerDependencies": {
+    "moment": "^2.27.0"
+  },
   "dependencies": {
-    "@ember/render-modifiers": "^1.0.2",
-    "@glimmer/component": "^1.0.1",
-    "@glimmer/tracking": "^1.0.1",
     "BaremetricsCalendar": "^1.0.13",
     "ember-auto-import": "^1.6.0",
     "ember-cli-babel": "^7.22.1",
     "ember-cli-htmlbars": "^5.2.0",
-    "macro-decorators": "^0.1.2",
-    "moment": "^2.27.0"
+    "@glimmer/component": "^1.0.1",
+    "@glimmer/tracking": "^1.0.1",
+    "@ember/render-modifiers": "^1.0.2",
+    "macro-decorators": "^0.1.2"
   },
   "devDependencies": {
     "@ember/optional-features": "^2.0.0",
+    "@ember/render-modifiers": "^1.0.2",
+    "@glimmer/component": "^1.0.1",
+    "@glimmer/tracking": "^1.0.1",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "3.0.0",
     "broccoli-funnel": "^3.0.3",
@@ -64,7 +69,9 @@
     "eslint-plugin-node": "11.1.0",
     "loader.js": "4.7.0",
     "npm-run-all": "^4.1.5",
-    "qunit-dom": "^1.2.0"
+    "qunit-dom": "^1.2.0",
+    "moment": "^2.27.0",
+    "macro-decorators": "^0.1.2"
   },
   "engines": {
     "node": "10.* || >= 12"
